--- a/game.html
+++ b/game.html
@@ -30,11 +30,12 @@ body {
 
 .fade-in {
     opacity: 0;
-    transition: opacity 0.8s;
+    transition: opacity 0.8s, transform 0.8s;
 }
 
 .visible {
     opacity: 1;
+    transform: translateY(0);
 }
 
 #intro-text {
@@ -67,7 +68,7 @@ body {
 /* 個別大小設定 */
 #computer-choice.scissors { width: 40%; }
 #computer-choice.rock { width: 50%; }
-#computer-choice.paper { width: 50%; }
+#computer-choice.paper { width: 60%; }   /* ← 已放大 */
 
 #emoji-display {
     font-size: 45vw; 
@@ -119,13 +120,22 @@ body {
     font-weight: bold;
     color: #4b0082;
     min-height: 8vw;
-    margin-bottom: 10px;
+    margin-bottom: 35px;   /* ← 與按鈕增加間距 */
 }
 
+/* 玩家按鈕初始：往下偏移等待動畫 */
 .player-buttons img {
     width: 70px;
     height: 70px;
     cursor: pointer;
+    transform: translateY(25px);   /* ← 從下往上淡入 */
+    opacity: 0;
+    transition: opacity 0.8s, transform 0.8s;
+}
+
+.player-buttons img.visible {
+    opacity: 1;
+    transform: translateY(0);
 }
 </style>
 </head>
@@ -146,11 +156,11 @@ body {
     </div>
 
     <div id="status-text" class="fade-in" style="visibility:hidden;">準備好了嗎？</div>
-    <div id="hint-text" class="fade-in" style="visibility:hidden;">好了就點擊出拳吧</div>
+    <div id="hint-text" class="fade-in" style="visibility:hidden;">(好了就點擊出拳吧)</div>
 
     <div id="result"></div>
 
-    <div class="player-buttons fade-in" id="player-buttons" style="visibility:hidden;">
+    <div class="player-buttons" id="player-buttons" style="visibility:hidden;">
         <img src="r.png" alt="剪刀" data-choice="r">
         <img src="g.png" alt="石頭" data-choice="g">
         <img src="b.png" alt="布" data-choice="b">
@@ -182,21 +192,26 @@ setTimeout(()=>{choiceBtns.style.visibility='visible'; choiceBtns.classList.add(
 // 點擊不樂意
 noBtn.addEventListener('click',()=>{
     noClickCount++;
-    if(noClickCount===1) emojiDisplay.textContent='🥺';
-    else emojiDisplay.textContent='🥹';
+    emojiDisplay.textContent = noClickCount === 1 ? '🥺' : '🥹';
 });
 
 // 點擊很樂意
 yesBtn.addEventListener('click',()=>{
-    // 隱藏初始文字和按鈕
     introText.style.display='none';
     choiceBtns.style.display='none';
     emojiDisplay.textContent='';
 
-    // 顯示準備文字和玩家按鈕
     setTimeout(()=>{statusText.style.visibility='visible'; statusText.classList.add('visible');},200);
     setTimeout(()=>{hintText.style.visibility='visible'; hintText.classList.add('visible');},1000);
-    setTimeout(()=>{playerBtnContainer.style.visibility='visible'; playerBtnContainer.classList.add('visible');},1800);
+
+    // 玩家按鈕依序淡入（r → g → b）
+    setTimeout(()=>{
+        playerBtnContainer.style.visibility='visible';
+        playerButtons[0].classList.add('visible');
+    },1700);
+
+    setTimeout(()=>{ playerButtons[1].classList.add('visible'); },1950);
+    setTimeout(()=>{ playerButtons[2].classList.add('visible'); },2200);
 });
 
 // 玩家出拳
@@ -206,17 +221,14 @@ playerButtons.forEach(btn=>{
         const computerChoiceFile = computerOptions[Math.floor(Math.random()*3)];
         computerChoiceImg.src = computerChoiceFile;
 
-        // 設定對應 class 控制大小
         computerChoiceImg.className = '';
         if(computerChoiceFile==='scissors2.png') computerChoiceImg.classList.add('scissors');
         else if(computerChoiceFile==='rock2.png') computerChoiceImg.classList.add('rock');
         else if(computerChoiceFile==='paper2.png') computerChoiceImg.classList.add('paper');
 
-        // 隱藏準備文字，但保留空位
         statusText.style.visibility='hidden';
         hintText.style.visibility='hidden';
 
-        // 判定勝負
         let result = '';
         if(playerChoice==='r'){
             if(computerChoiceFile==='scissors2.png') result='平手';
@@ -238,4 +250,4 @@ playerButtons.forEach(btn=>{
 </script>
 
 </body>
-</html>
+</html>F
